--- a/composer.json
+++ b/composer.json
@@ -3,35 +3,22 @@
 	"description": "Reports for Craft CMS",
 	"version": "1.0.0",
 	"type": "craft-plugin",
+	"license": "MIT",
 	"keywords": [
 		"flipbox",
 		"reports",
 		"craftcms",
 		"yii2"
 	],
-	"license": "proprietary",
-	"authors": [{
-		"name": "Flipbox Factory",
-		"email": "hello@flipboxfactory.com"
-	}],
-	"support": {
-		"email": "support@flipboxfactory.com",
-		"issues": "https://github.com/flipboxfactory/craft-reports/issues?state=open",
-		"source": "https://github.com/flipboxfactory/craft-reports",
-		"docs": "https://github.com/flipboxfactory/craft-reports",
-		"rss": "https://github.com/flipboxfactory/craft-reports/commits/master.atom"
-	},
 	"require": {
-		"craftcms/cms": "^3.1.20",
-		"flipboxfactory/craft-ember": "^2.4.1",
+		"craftcms/cms": "^3.2",
+		"flipboxfactory/craft-ember": "^2.5",
 		"violet/streaming-json-encoder": "^1.1",
 		"zendframework/zend-diactoros": "^1.4"
 	},
 	"require-dev": {
-		"ext-dom": "*",
-		"squizlabs/php_codesniffer": "^3.2",
-		"codeception/codeception": "^2.4.0",
-		"vlucas/phpdotenv": "^2.4"
+		"squizlabs/php_codesniffer": "^3.4",
+		"codeception/codeception": "^3.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -43,13 +30,21 @@
 			"flipbox\\craft\\reports\\tests\\": "tests/src/"
 		}
 	},
+	"support": {
+		"email": "support@flipboxfactory.com",
+		"issues": "https://github.com/flipboxfactory/craft-reports/issues?state=open",
+		"source": "https://github.com/flipboxfactory/craft-reports",
+		"docs": "https://github.com/flipboxfactory/craft-reports",
+		"rss": "https://github.com/flipboxfactory/craft-reports/commits/master.atom"
+	},
 	"extra": {
 		"name": "Reports",
 		"handle": "reports",
-		"developer": "Flipbox Digital",
-		"developerUrl": "https://www.flipboxfactory.com",
 		"class": "flipbox\\craft\\reports\\Reports",
-		"changelogUrl": "https://raw.githubusercontent.com/flipboxfactory/organizations/master/CHANGELOG.md",
+		"developer": "Flipbox Digital",
+		"developerUrl": "https://www.flipboxdigital.com",
+		"changelogUrl": "https://raw.githubusercontent.com/flipboxfactory/craft-reports/master/CHANGELOG.md",
+		"downloadUrl": "https://github.com/flipboxfactory/craft-reports/archive/master.zip",
 		"documentationUrl": "https://github.com/flipboxfactory/craft-reports",
 		"hasCpSettings": false,
 		"hasCpSection": true,
