--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   - if [ $(phpenv version-name) = "7.1" ]; then ./cc-test-reporter before-build; fi
 
 script:
-  - vendor/bin/phpcs --standard=psr2 --ignore=src/web/assets/*/dist/*,src/migrations/m* src/
+  - vendor/bin/phpcs --standard=psr2 --ignore=src/web/assets/*/dist/* src/
   - php vendor/bin/codecept run unit -vvv -d --coverage --coverage-xml
 
 after_script:
