--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,6 @@ services:
         environment:
             MYSQL_ROOT_PASSWORD: password
             MYSQL_DATABASE: test
-            MYSQL_USER: craft
+            MYSQL_USER: root
             MYSQL_PASSWORD: craft
+
